...
                                        <connections>
                                            <segue destination="K4t-KZ-oBZ" kind="presentation" modalPresentationStyle="fullScreen" id="HWZ-zt-xds"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="82t-CX-RnE">
                                        <rect key="frame" x="0.0" y="116" width="208.5" height="38"/>
                                        <accessibility key="accessibilityConfiguration" identifier="UIImageButton"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="UIImage" cornerStyle="capsule">
                                            <backgroundConfiguration key="background">
                                                <color key="backgroundColor" red="0.41569432620000002" green="0.38795012849999999" blue="0.65508121249999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            </backgroundConfiguration>
                                            <fontDescription key="titleFontDescription" type="system" pointSize="20"/>
...
