//
//  UIKitTutorialsUITests.swift
//  UIKitTutorialsUITests
//
//  Created by Mikhail on 14.02.2022.
//

import XCTest

class UIKitTutorialsUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() throws {
        let app = XCUIApplication()
        app.launch()
        app.buttons["UIImageButton"].tap()
        app/*@START_MENU_TOKEN@*/.buttons["StartButton"]/*[[".buttons[\"Старт\"]",".buttons[\"StartButton\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        
        app/*@START_MENU_TOKEN@*/.buttons["StopButton"]/*[[".buttons[\"Стоп\"]",".buttons[\"StopButton\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app/*@START_MENU_TOKEN@*/.buttons["CloseButton"]/*[[".buttons[\"Close\"]",".buttons[\"CloseButton\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
    }
}
